<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rs.elfak.mosis.lab_3.EditMyPlaceActivity">

    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_map"/>

    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_view_as_list"/>

    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about"/>

</menu>